--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^2.2.33",
     "mongoose": "^4.5.9",
     "socket.io": "^2.0.4",
+    "socketio-jwt-auth": "0.0.6",
     "twilio": "^3.11.1",
     "validator": "^9.2.0"
   },
