--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.4",
     "mongodb": "^2.2.33",
     "mongoose": "^4.5.9",
+    "randomatic": "^3.0.0",
     "socket.io": "^2.0.4",
     "socketio-jwt-auth": "0.0.6",
     "twilio": "^3.11.1",
